namespace LlamAcademy.Dinos.Utility
{
    public class AnimationConstants
    {
        public const string IS_ATTACKING_PARAMETER = "IsAttacking";
        public const string DIE_PARAMETER = "Die";
        public const string SPEED_PARAMETER = "Speed";
        public const string DIRECTION_PARAMETER = "Direction";
    }
}
